ingress/ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: basic-routing
  annotations:
    nginx.ingress.kubernetes.io/auth-type: "basic"
    nginx.ingress.kubernetes.io/auth-secret: "mycredentials"
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: fleetman.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fleetman-webapp
                port:
                  number: 80
    - host: queue.fleetman.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fleetman-queue
                port:
                  number: 8161
